# unhide-rs

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml  release.yml
crates/unhide-cli/: Cargo.toml
crates/unhide-cli/src/: linux.rs  main.rs  posix.rs  rb.rs  tcp.rs
crates/unhide-cli/src/linux/: bruteforce.rs  compound.rs  procfs.rs  syscall.rs
crates/unhide-core/: Cargo.toml
crates/unhide-core/src/: lib.rs  output.rs  proc.rs
crates/unhide-gui/: Cargo.toml
crates/unhide-gui/src/: main.rs
docs/: USAGE.md  USAGE_zh.md
